Add load test for high load profile

--- a/VSLoadTest/VSLoadTest/VSLoadTest.csproj
+++ b/VSLoadTest/VSLoadTest/VSLoadTest.csproj
@@ -53,6 +53,9 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="Http-HighLoad.loadtest">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
     <None Include="HttpStatic-MediumLoad.loadtest">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
